<resources>

    <string name="app_name">LookSync</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LookSync</string>
    <string name="title_activity_samba_sync">Synchronisation Samba</string>
    <string name="syncTitle">Synchronisation SMB</string>    
    <string name="syncNow">Synchroniser maintenant</string>
    <string name="syncSave">Enregistrer les paramètres</string>
    <string name="hintMdp">Entrez le mot de passe</string>
    <string name="hintIP">Entrez une adresse IP</string>
    <string name="user">Utilisateur</string>
    <string name="hintUser">Entrez un nom utilisateur</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="syncIp">IP ordinateur</string>
    

</resources>