<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtSyncTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/syncTitle" />
  
    <TextView
        android:id="@+id/txtSyncIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_below="@id/txtSyncTitle"
        android:text="@string/syncIp"/>

    <EditText
        android:id="@+id/txtAdresseIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSyncIp"
        android:hint="@string/hintIP"
        android:ems="10"/>

    <TextView
        android:id="@+id/txtSyncUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAdresseIP"
        android:text="@string/user"
        android:hint="@string/hintUser"/>

    <EditText
        android:id="@+id/txtUtilisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSyncUser"
        android:hint="@string/hintIP"
        android:ems="10">
    </EditText>
    
    <TextView
        android:id="@+id/txtSyncMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUtilisateur"
        android:text="@string/motDePasse"/>

    <EditText
        android:id="@+id/txtMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSyncMdp"
        android:ems="10"
        android:hint="@string/hintMdp"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/btnEnregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMdp"
        android:text="@string/syncSave" />

    <Button
        android:id="@+id/btnSynchroniser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEnregistrer"
        android:text="@string/syncNow" />

</RelativeLayout>
